--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,13 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    
+    /*compile files (
+        "libs/GalacticraftAPI.jar",
+        "libs/GalacticraftCore.jar",
+        "libs/MicdoodleCore.jar"
+    )*/
+}
 
 }
 
